[package]
name = "git-hbr"
version = "0.2.0"
authors = ["Vlad Nedelcu <nedelcuvd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
dialoguer = "0.11.0"
git2 = "0.18.2"
sha2 = "0.10.8"
structopt = "0.3.26"
